--- a/app/partials/Personal/SOStatus.html
+++ b/app/partials/Personal/SOStatus.html
@@ -157,6 +157,9 @@
                                         Sold To
 										</th>
 										<th >
+                                       Creation Date Bolton
+										</th>
+										<th >
                                        Creation Time WK
 										</th>
 										<th >
@@ -192,6 +195,7 @@
 										<td>{{ x.Entry12 }}</td>
 										<td>{{ x.Entry4 }}</td>
 										<td>{{ x.Entry6 }}</td>
+										<td>{{ x.Entry9 }}</td>
 										<td>{{ x.Entry10 }}</td>
 										<td>{{ x.Entry2 }}</td>
 
