Shipment Details + gif

--- a/app/partials/Personal/LoadInbound.html
+++ b/app/partials/Personal/LoadInbound.html
@@ -5,7 +5,7 @@
 		<div class="r4_counter wid-stats db_box" style="width:30% ;float: right"  >
 			<div class='stats-data'>
 
-				<i ng-class="{ true : 'material-icons icon-danger pull-left' , false : 'material-icons icon-success pull-left' } [HokanFilesCount>1] "  >{{  (HokanFilesCount>1) ? "report_problem" : "check circle" }}</i>
+				<i ng-class="{ true : 'material-icons icon-danger pull-left' , false : 'material-icons icon-success pull-left' } [HokanFilesCount>1] "  >{{  (HokanFilesCount>1) ? "report_problem" : "check_circle" }}</i>
 
 				<div class="stats">
 					<h3>{{HokanFilesCount}} files</h3>
