--- a/app/partials/Personal/PreviousDay_Customer.html
+++ b/app/partials/Personal/PreviousDay_Customer.html
@@ -162,6 +162,11 @@
 														   No Data             
 													</td>
 												</tr>
+												<tr >
+													<td ng-show="loadingStatus" colspan="20" style="text-align:center">
+														  <img src="img/Magnify.gif" >             
+													</td>
+												</tr>
 
 											</table>
 											<div>
