--- a/app/partials/Personal/PreviousDay_Material.html
+++ b/app/partials/Personal/PreviousDay_Material.html
@@ -44,7 +44,7 @@
                     </div>
 					
                     <div class="col-lg-15 col-md-4 col-xs-2 col-sm-6">
-                        <div class="tile-counter bg-primary">
+                        <div  ng-class="{ true : 'tile-counter bg-primary' , false : 'tile-counter bg-danger' } [ExpectedRecords==insertedRow] ">
                             <div class="content">
                                 <i class='fa fa-database icon-lg'></i>
                                 <h2 count-to="{{insertedRow}}" value="0" duration="1" class="number_counter"></h2>
