--- a/app/partials/Personal/SOStatus.html
+++ b/app/partials/Personal/SOStatus.html
@@ -201,8 +201,8 @@
 
 
 										<td>
-											<span ng-class="{0 : 'label label-warning', 1 : 'label label-warning' , 2 : 'label label-success' , 
-											3 : 'label label-danger' , 4 : 'label label-success' , 5 : 'label label-danger' , 6 : 'label label-success' } [x.Entry8] " >
+											<span ng-class="{0 : 'label label-created', 1 : 'label label-warning' , 2 : 'label label-success' , 
+											3 : 'label label-danger' , 4 : 'label label-success' , 5 : 'label label-danger' , 6 : 'label label-released' } [x.Entry8] " >
 										{{  x.Entry8 == 0 ? "Created In Bolton" : 
 											x.Entry8 == 1 ? "In Progress" :
 											x.Entry8 == 2 ? "Sent To SAP" :
