--- a/app/partials/app_dashboard.html
+++ b/app/partials/app_dashboard.html
@@ -1,4 +1,52 @@
 <div class='content-wrapper' ng-init="app.settings.pagetitle = 'Dashboard'; ">
-    
+    <div class="col-lg-12" >
 	
+	
+	<section class="box ">
+	
+            <header class="panel_header">
+                <h2 class="title pull-left">Master Data Status</h2>
+                <div class="actions panel_actions pull-right">
+                    <i class="box_toggle material-icons">expand_more</i>
+                    
+                </div>
+            </header>
+	
+	
+			<div class="content-body padding-bottom-0">
+			
+			<!--
+					<div class="col-lg-15 col-md-6 col-xs-6 col-sm-6">
+                        <div class="tile-counter bg-primary">
+                            <div class="content">
+                                <i class='fa fa-laptop icon-lg'></i>
+                                <h2 count-to="{{ExpectedRecords}}" value="0" duration="1" class="number_counter"></h2>
+                                <div class="clearfix"></div>
+                                <span>Records In SAP</span>
+                            </div>
+                        </div>
+                    </div>
+					
+					<div class="col-lg-15 col-md-6 col-xs-6 col-sm-6">
+                        <div class="tile-counter bg-primary">
+                            <div class="content">
+                                <i class='fa fa-laptop icon-lg'></i>
+                                <h2 count-to="{{ExpectedRecords}}" value="0" duration="1" class="number_counter"></h2>
+                                <div class="clearfix"></div>
+                                <span>Records In SAP</span>
+                            </div>
+                        </div>
+                    </div>
+					
+			-->
+			
+			</div>
+	
+	
+	</section>
+	
+	
+	
+	
+	</div>
 </div>
