--- a/app/partials/components/nav.html
+++ b/app/partials/components/nav.html
@@ -158,6 +158,9 @@
                                 <span class="arrow material-icons">keyboard_arrow_right</span>
                             </a>
                             <ul class="wraplist wraplist-sub sub-menu dk" >
+							<li ui-sref-active="active">
+                                    <a ui-sref="app.tables.salesOrderDashboard">SO Dashboard</a>
+                                </li>
                                 <li ui-sref-active="active">
                                     <a ui-sref="app.tables.test">SO Per Hour</a>
                                 </li>							
