change before meeting

--- a/app/partials/Personal/SOStatus.html
+++ b/app/partials/Personal/SOStatus.html
@@ -145,6 +145,9 @@
 											</select>
 										</th>
 										<th>
+                                        Transaction Id
+										</th>
+										<th>
                                         SO Number
 										</th>
 										<th>
@@ -191,6 +194,7 @@
 								<tbody>
 									<tr dir-paginate="x in recordsOfToday | filter : filterText | filter : { Entry14 : typeSearch } | filter : { Entry8 : StatusSearch } | itemsPerPage:10  ">
 										<td>{{ x.Entry14 }}</td>
+										<td>{{ x.Entry1 }}</td>
 										<td>{{ x.Entry13 }}</td>
 										<td>{{ x.Entry12 }}</td>
 										<td>{{ x.Entry4 }}</td>
