--- a/app/partials/Personal/SalesOrderDashboard.html
+++ b/app/partials/Personal/SalesOrderDashboard.html
@@ -42,7 +42,7 @@
 		
 		<div class="col-md-12 col-sm-12 col-xs-12 padding-right-30 padding-left-20">
 			<div class="col-lg-3 col-md-4 col-xs-12 col-sm-6">
-                        <div class="wid-social persoWidget" ng-click="RedirectToSoStatus('SUPERDAIWA')" >						
+                        <div class="wid-social persoWidget" style="cursor:pointer" ng-click="RedirectToSoStatus('SUPERDAIWA')" >						
 								<i ng-class="{ true : 'material-icons icon-lg icon-danger pull-right' , false : 'material-icons icon-lg icon-success pull-right' } [DaiwaError>0] " style="" >{{  (DaiwaError>0) ? "report_problem" : "check_circle" }}</i>
                             <div class="social-info">
 								<h3 class="bold"> SUPERDAIWA</h3>
@@ -62,7 +62,7 @@
 			
 			
 			<div class="col-lg-3 col-md-4 col-xs-12 col-sm-6">
-                        <div class="wid-social persoWidget" ng-click="RedirectToSoStatus('Ebest')" >	
+                        <div class="wid-social persoWidget" style="cursor:pointer" ng-click="RedirectToSoStatus('Ebest')" >	
 									<!--					
 								<i ng-class="{ true : 'material-icons icon-lg icon-warning pull-right' , false : 'material-icons icon-lg icon-success pull-right' } [ebestWarning>0] " style="" >{{  (ebestError>0) ? "report_problem" : (  (ebestWarning>0) ? "sms_failed" : "check_circle" ) }}</i>
 								-->
@@ -87,7 +87,7 @@
             </div>
 			
 			<div class="col-lg-3 col-md-4 col-xs-12 col-sm-6">
-                        <div class="wid-social persoWidget" ng-click="RedirectToSoStatus('Manual')" >						
+                        <div class="wid-social persoWidget" style="cursor:pointer" ng-click="RedirectToSoStatus('Manual')" >						
 								<i ng-class="{ true : 'material-icons icon-lg icon-danger pull-right' , false : 'material-icons icon-lg icon-success pull-right' } [manualError>0] " style="" >{{  (manualError>0) ? "report_problem" : "check_circle" }}</i>
                             <div class="social-info">
 								<h3 class="bold"> Manual</h3>
@@ -113,7 +113,7 @@
 		<div class="col-md-12 col-sm-12 col-xs-12 padding-right-30 padding-left-20" ng-click="RedirectToSoStatus('EOS')" >
 		
 		<div class="col-lg-3 col-md-4 col-xs-12 col-sm-6">
-                        <div class="wid-social persoWidget" ng-click="RedirectToSoStatus('EOS')">						
+                        <div class="wid-social persoWidget" style="cursor:pointer" ng-click="RedirectToSoStatus('EOS')">						
 								<i ng-class="{ true : 'material-icons icon-lg icon-danger pull-right' , false : 'material-icons icon-lg icon-success pull-right' } [eosError>0] " style="" >{{  (eosError>0) ? "report_problem" : "check_circle" }}</i>
                             <div class="social-info">
 								<h3 class="bold"> EOS Normal</h3>
@@ -131,7 +131,7 @@
         </div>
 		
 		<div class="col-lg-3 col-md-4 col-xs-12 col-sm-6">
-                        <div class="wid-social persoWidget" ng-click="RedirectToSoStatus('EOS')">						
+                        <div class="wid-social persoWidget" style="cursor:pointer" ng-click="RedirectToSoStatus('EOS')">						
 								<i ng-class="{ true : 'material-icons icon-lg icon-danger pull-right' , false : 'material-icons icon-lg icon-success pull-right' } [eosError>0] " style="" >{{  (eosError>0) ? "report_problem" : "check_circle" }}</i>
                             <div class="social-info">
 								<h3 class="bold"> EOS Sales</h3>
@@ -149,7 +149,7 @@
         </div>
 		
 		<div class="col-lg-3 col-md-4 col-xs-12 col-sm-6">
-                        <div class="wid-social persoWidget" ng-click="RedirectToSoStatus('EOS')" >						
+                        <div class="wid-social persoWidget" style="cursor:pointer" ng-click="RedirectToSoStatus('EOS')" >						
 								<i ng-class="{ true : 'material-icons icon-lg icon-danger pull-right' , false : 'material-icons icon-lg icon-success pull-right' } [eosError>0] " style="" >{{  (eosError>0) ? "report_problem" : "check_circle" }}</i>
                             <div class="social-info">
 								<h3 class="bold"> EOS Through</h3>
@@ -167,7 +167,7 @@
         </div>
 		
 		<div class="col-lg-3 col-md-4 col-xs-12 col-sm-6">
-                        <div class="wid-social persoWidget" ng-click="RedirectToSoStatus('EOS')">						
+                        <div class="wid-social persoWidget" style="cursor:pointer" ng-click="RedirectToSoStatus('EOS')">						
 								<i ng-class="{ true : 'material-icons icon-lg icon-danger pull-right' , false : 'material-icons icon-lg icon-success pull-right' } [eosError>0] " style="" >{{  (eosError>0) ? "report_problem" : "check_circle" }}</i>
                             <div class="social-info">
 								<h3 class="bold"> EOS JDC</h3>
@@ -190,7 +190,7 @@
 		<div class="col-md-12 col-sm-12 col-xs-12 padding-right-30 padding-left-20"  >
 			
 			<div class="col-lg-3 col-md-4 col-xs-12 col-sm-6">
-                        <div class="wid-social persoWidget" ng-click="RedirectToSoStatus('NEOS')" >						
+                        <div class="wid-social persoWidget" style="cursor:pointer" ng-click="RedirectToSoStatus('NEOS')" >						
 								<i ng-class="{ true : 'material-icons icon-lg icon-danger pull-right' , false : 'material-icons icon-lg icon-success pull-right' } [neosError>0] " style="" >{{  (neosError>0) ? "report_problem" : "check_circle" }}</i>
                             <div class="social-info">
 								<h3 class="bold"> NEOS Normal</h3>
@@ -210,7 +210,7 @@
 			
 			
 			<div class="col-lg-3 col-md-4 col-xs-12 col-sm-6">
-                        <div class="wid-social persoWidget" ng-click="RedirectToSoStatus('NEOS')" >						
+                        <div class="wid-social persoWidget" style="cursor:pointer" ng-click="RedirectToSoStatus('NEOS')" >						
 								<i ng-class="{ true : 'material-icons icon-lg icon-danger pull-right' , false : 'material-icons icon-lg icon-success pull-right' } [neosError>0] " style="" >{{  (neosError>0) ? "report_problem" : "check_circle" }}</i>
                             <div class="social-info">
 								<h3 class="bold"> NEOS Sales</h3>
@@ -228,7 +228,7 @@
         </div>
 		
 			<div class="col-lg-3 col-md-4 col-xs-12 col-sm-6">
-                        <div class="wid-social persoWidget" ng-click="RedirectToSoStatus('NEOS')" >						
+                        <div class="wid-social persoWidget" style="cursor:pointer" ng-click="RedirectToSoStatus('NEOS')" >						
 								<i ng-class="{ true : 'material-icons icon-lg icon-danger pull-right' , false : 'material-icons icon-lg icon-success pull-right' } [neosError>0] " style="" >{{  (neosError>0) ? "report_problem" : "check_circle" }}</i>
                             <div class="social-info">
 								<h3 class="bold"> NEOS Through</h3>
@@ -246,7 +246,7 @@
         </div>
 			
 			<div class="col-lg-3 col-md-4 col-xs-12 col-sm-6">
-                        <div class="wid-social persoWidget" ng-click="RedirectToSoStatus('NEOS')" >						
+                        <div class="wid-social persoWidget" style="cursor:pointer" ng-click="RedirectToSoStatus('NEOS')" >						
 								<i ng-class="{ true : 'material-icons icon-lg icon-danger pull-right' , false : 'material-icons icon-lg icon-success pull-right' } [neosError>0] " style="" >{{  (neosError>0) ? "report_problem" : "check_circle" }}</i>
                             <div class="social-info">
 								<h3 class="bold"> NEOS JDC</h3>
